@@ -1,0 +1,7 @@
+fileFormatVersion: 2
+guid: 2f8f55405e6d22549920708948680292
+DefaultImporter:
+  externalObjects: {}
+  userData: 
+  assetBundleName: 
+  assetBundleVariant: 
