@@ -8,8 +8,9 @@ Unreleased
  - Fix double duplication of blocks in flowchart window. Thanks to ongjinwen.
  - Dialog ClickAnywhere not supports ignore click delay. Thanks to breadnone.
  - SetNextLineFlag only flags if Dialog is actually active/writing. Thanks to breadnone. 
- - TextAdapter with TMPro, now forces mesh update on text change. Fixes cases where a Say/Writer would expect RevealedCharacters to be current but would be previous frame stale value.  
- 
+ - TextAdapter with TMPro, now forces mesh update on text change. Fixes cases where a Say/Writer would expect RevealedCharacters to be current but would be previous frame stale value.
+ - Camera Fade clears local callback before execution, fixes #973.
+
 ## Changed
  - Block will LogError when an exception is caught from a Command being Executed.
  - WriterAudio.GetSecondsRemaining reports 0 if not playing. Thanks to KVinS.
